--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chai": "4.1.2",
     "chai-spies": "^1.0.0",
     "expect": "^1.20.2",
+    "global-jsdom": "^8.8.0",
     "jsdom": "9.2.1",
     "json-server": "^0.14.2",
     "mocha": "5.2.0",
